--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Para definir el puerto donde "escuchara" el servidor
 server.port=80
+
+#para definir eñ fpr,atp de despliegue de fecha/hora del log en la consola 
+logging.pattern.dateformat=hh:mm
+
+#Para eliminar mensajes invasivos de spring
+spring.main.banner-mode=off
+
+#En el desarrollo el cache del servidor (false) en produccion "true"
+spring.thymeleaf.cache=false
