--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
     <version>1</version>
     <name>tienda</name>
     <description>Proyecto hecho en clase de Web y Patrones</description>
-    
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -26,7 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -48,7 +46,6 @@
             <artifactId>bootstrap</artifactId>
             <version>5.3.3</version>
         </dependency>
-        
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>font-awesome</artifactId>
@@ -68,7 +65,16 @@
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
             <version>0.52</version>
-        </dependency>         
+        </dependency>    
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>                 
     </dependencies>
 
     <build>
